update content and data

--- a/data/cities/quinton/quinton-true-value-hardware.yml
+++ b/data/cities/quinton/quinton-true-value-hardware.yml
@@ -8,4 +8,4 @@ street: "Main"
 housenumber: 1020
 phone: "+1 918-469-2970"
 opening_hours: "Mo-Fr 08:00-17:00; Sa 08:00-12:00"
-website: "http://www.truevalue.com/quintontruevalue"
+website: "https://www.truevalue.com/quintontruevalue"
