--- a/data/cities/eufaula/eufaula-true-value-hardware.yml
+++ b/data/cities/eufaula/eufaula-true-value-hardware.yml
@@ -8,4 +8,4 @@ street: "South Main Street"
 housenumber: 625
 phone: "+1 918-689-2574"
 opening_hours: ""
-website: "http://www.truevalue.com/eufaulatruevaluehardware"
+website: "https://www.truevalue.com/eufaulatruevaluehardware"
