--- a/data/cities/hartshorne/true-value.yml
+++ b/data/cities/hartshorne/true-value.yml
@@ -8,4 +8,4 @@ street: "Pennsylvania Avenue"
 housenumber: 1108
 phone: "+1 918-297-3636"
 opening_hours: ""
-website: "http://www.truevalue.com/hartshornetruevalue"
+website: "https://www.truevalue.com/hartshornetruevalue"
