--- a/data/cities/tulsa/second-generation-motor-company.yml
+++ b/data/cities/tulsa/second-generation-motor-company.yml
@@ -6,6 +6,6 @@ postcode: ""
 city: Tulsa
 street: "East 11th Street"
 housenumber: 4425
-phone: "+1 918 832 7999"
+phone: ""
 opening_hours: ""
 website: ""
