--- a/data/cities/wilburton/southeast-true-value-hardware.yml
+++ b/data/cities/wilburton/southeast-true-value-hardware.yml
@@ -8,4 +8,4 @@ street: "Highway 2 North"
 housenumber: 612
 phone: "+1 918-465-5417"
 opening_hours: "Mo-Fr 08:00-17:30; Sa 08:00-14:30"
-website: "http://www.truevalue.com/southeast"
+website: "https://www.truevalue.com/southeast"
