update content and data

--- a/data/cities/oklahoma-city/burlington.yml
+++ b/data/cities/oklahoma-city/burlington.yml
@@ -6,6 +6,6 @@ postcode: "73149"
 city: Oklahoma City
 street: "South Shields Boulevard"
 housenumber: 7401
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 405-636-0002"
+opening_hours: "09:00-23:00"
+website: "https://stores.burlington.com/ok/oklahoma-city/487"
