--- a/data/cities/tulsa/ulta-beauty.yml
+++ b/data/cities/tulsa/ulta-beauty.yml
@@ -1,11 +1,11 @@
-id: 252808940
+id: 274295264
 type: way
-latitude: 36.10556
-longitude: -95.92058
-postcode: "74135"
+latitude: 36.05461
+longitude: -96.0015
+postcode: "74132"
 city: Tulsa
-street: "East 41st Street"
-housenumber: 4915
-phone: "+1 918-664-5916"
-opening_hours: "Mo-We 10:00-20:00; Th 10:00-21:00; Fr 09:00-21:00; Sa 09:00-22:00; Su 11:00-19:00"
-website: "https://www.ulta.com/stores/tulsa-ok-131"
+street: "South Olympia Avenue"
+housenumber: 7505
+phone: "+1 918-447-0917"
+opening_hours: "Mo-We 10:00-20:00; Th-Sa 10:00-21:00; Su 11:00-18:00"
+website: "https://www.ulta.com/stores/tulsa-ok-390"
