--- a/data/cities/tulsa/sams-club.yml
+++ b/data/cities/tulsa/sams-club.yml
@@ -1,11 +1,11 @@
-id: 274308563
+id: 164015326
 type: way
-latitude: 36.05152
-longitude: -96.00444
-postcode: "74132"
+latitude: 36.10016
+longitude: -95.90594
+postcode: "74145"
 city: Tulsa
-street: "South Olympia Avenue West"
-housenumber: 7757
-phone: "+1 918-877-4546"
+street: "South Sheridan"
+housenumber: 4420
+phone: "+1 918-627-1443"
 opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
-website: "https://www.samsclub.com/club/tulsa-ok-sams-club/4839"
+website: "https://www.samsclub.com/club/tulsa-ok-sams-club/8263"
