--- a/data/cities/tulsa/costco-north-118th-east-avenue.yml
+++ b/data/cities/tulsa/costco-north-118th-east-avenue.yml
@@ -4,7 +4,7 @@ latitude: 36.22233
 longitude: -95.85015
 postcode: "74116"
 city: Tulsa
-street: "North 118th Avenue East"
+street: "North 118th East Avenue"
 housenumber: 4816
 phone: "+1 539-235-5110"
 opening_hours: "Mo-Fr 10:00-20:30; Sa 09:30-18:00; Su 10:00-18:00"
