update content and data

--- a/data/cities/oklahoma-city/best-buy-west-memorial-road.yml
+++ b/data/cities/oklahoma-city/best-buy-west-memorial-road.yml
@@ -1,7 +1,7 @@
-id: 12045510066
-type: node
-latitude: 35.61105
-longitude: -97.55148
+id: 1308334265
+type: way
+latitude: 35.61148
+longitude: -97.55177
 postcode: "73134"
 city: Oklahoma City
 street: "West Memorial Road"
