--- a/data/cities/oklahoma-city/braums-2.yml
+++ b/data/cities/oklahoma-city/braums-2.yml
@@ -1,10 +1,10 @@
-id: 1251633808
+id: 284249016
 type: way
-latitude: 35.51429
-longitude: -97.56481
+latitude: 35.51183
+longitude: -97.59292
 postcode: "73112"
 city: Oklahoma City
-street: "North May Avenue"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
