--- a/data/cities/shawnee/walmart-supercenter.yml
+++ b/data/cities/shawnee/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315602305
-type: node
-latitude: 35.38688
-longitude: -96.92179
+id: 1308426147
+type: way
+latitude: 35.38739
+longitude: -96.92056
 postcode: "74804"
 city: Shawnee
 street: "Shawnee Mall Drive"
