--- a/data/cities/oklahoma-city/braums.yml
+++ b/data/cities/oklahoma-city/braums.yml
@@ -1,11 +1,11 @@
-id: 284249016
+id: 238019833
 type: way
-latitude: 35.51183
-longitude: -97.59292
-postcode: "73112"
+latitude: 35.60957
+longitude: -97.5331
+postcode: ""
 city: Oklahoma City
-street: ""
-housenumber: 
+street: "West Memorial Road"
+housenumber: 1129
 phone: ""
 opening_hours: ""
 website: ""
