--- a/data/cities/oklahoma-city/sams-club.yml
+++ b/data/cities/oklahoma-city/sams-club.yml
@@ -1,11 +1,11 @@
-id: 229953670
+id: 238022244
 type: way
-latitude: 35.56054
-longitude: -97.65073
-postcode: "73132"
+latitude: 35.60809
+longitude: -97.54613
+postcode: "73134"
 city: Oklahoma City
-street: "Northwest Passage"
-housenumber: 9000
-phone: "+1 405-773-3602"
+street: "West Memorial Road"
+housenumber: 1900
+phone: "+1 405-748-7109"
 opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
-website: "https://www.samsclub.com/club/oklahoma-city-ok-sams-club/4731"
+website: "https://www.samsclub.com/club/oklahoma-city-ok-sams-club/8117"
