update content and data

--- a/data/cities/norman/walmart-supercenter-north-interstate-drive.yml
+++ b/data/cities/norman/walmart-supercenter-north-interstate-drive.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "North Interstate Drive"
 housenumber: 333
 phone: "+1 405-329-4000"
-opening_hours: "24/7"
+opening_hours: "Mo-Su 06:00-23:00"
 website: "https://www.walmart.com/store/212/norman-ok/whats-new"
