--- a/data/cities/oklahoma-city/extra-space-storage-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/extra-space-storage-north-may-avenue.yml
@@ -1,10 +1,10 @@
-id: 284249016
+id: 1251633808
 type: way
-latitude: 35.51183
-longitude: -97.59292
+latitude: 35.51429
+longitude: -97.56481
 postcode: "73112"
 city: Oklahoma City
-street: ""
+street: "North May Avenue"
 housenumber: 
 phone: ""
 opening_hours: ""
