--- a/data/cities/norman/dollar-general.yml
+++ b/data/cities/norman/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 187422419
-type: way
-latitude: 35.20299
-longitude: -97.47507
-postcode: "73069"
+id: 12128228249
+type: node
+latitude: 35.20462
+longitude: -97.42169
+postcode: "73071"
 city: Norman
-street: "Lindsey Drive"
+street: "East Lindsey Street"
 housenumber: 1221
 phone: ""
-opening_hours: ""
-website: "https://www.dollargeneral.com/store-directory/ok/norman/4591"
+opening_hours: "Mo-Su 08:00-22:00"
+website: "https://www.dollargeneral.com/store-directory/ok/norman/2324"
