--- a/data/cities/norman/university-liquor.yml
+++ b/data/cities/norman/university-liquor.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "East Lindsey Street"
 housenumber: 1215
 phone: "+1-405-573-1977"
-opening_hours: "10:00-21:00"
+opening_hours: "Mo-Th 10:00-21:00; Fr-Sa 10:00-22:00"
 website: ""
