--- a/data/cities/norman/walmart-supercenter-classen-boulevard.yml
+++ b/data/cities/norman/walmart-supercenter-classen-boulevard.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "Classen Boulevard"
 housenumber: 3651
 phone: "+1 405-515-7024"
-opening_hours: "24/7"
+opening_hours: "Mo-Su 06:00-23:00"
 website: "https://www.walmart.com/store/7294-norman-ok"
