--- a/data/cities/norman/walmart-supercenter.yml
+++ b/data/cities/norman/walmart-supercenter.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "12th Avenue Northeast"
 housenumber: 601
 phone: "+1 405-579-5203"
-opening_hours: "24/7"
+opening_hours: "Mo-Su 06:00-23:00"
 website: "https://www.walmart.com/store/2734/norman-ok/whats-new"
