update content and data

--- a/data/cities/bristow/walmart-supercenter.yml
+++ b/data/cities/bristow/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315598870
-type: node
-latitude: 35.84401
-longitude: -96.39481
+id: 382772353
+type: way
+latitude: 35.84432
+longitude: -96.39552
 postcode: "74010"
 city: Bristow
 street: "West Highway 16"
