--- a/data/cities/lawton/walmart-supercenter.yml
+++ b/data/cities/lawton/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 5315599455
-type: node
-latitude: 34.61877
-longitude: -98.42438
+id: 480687502
+type: way
+latitude: 34.63213
+longitude: -98.47215
 postcode: "73505"
 city: Lawton
-street: "Northwest Sheridan Road"
-housenumber: 1002
-phone: "+1 580-355-9070"
+street: "Northwest Quannah Parker Trail"
+housenumber: 6301
+phone: "+1 580-510-9130"
 opening_hours: "24/7"
-website: "https://www.walmart.com/store/269/lawton-ok/whats-new"
+website: "https://www.walmart.com/store/5071-lawton-ok"
