--- a/data/cities/sallisaw/walmart-supercenter.yml
+++ b/data/cities/sallisaw/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315597950
-type: node
-latitude: 35.45101
-longitude: -94.80181
+id: 1205525911
+type: way
+latitude: 35.45145
+longitude: -94.80252
 postcode: "74955"
 city: Sallisaw
 street: "West Ruth Avenue"
