--- a/data/cities/oklahoma-city/vintage-stock.yml
+++ b/data/cities/oklahoma-city/vintage-stock.yml
@@ -6,6 +6,6 @@ postcode: "73116"
 city: Oklahoma City
 street: "North May Avenue"
 housenumber: 7407
-phone: ""
+phone: "+1 405 843 5480"
 opening_hours: ""
 website: ""
