--- a/data/cities/tulsa/sams-club.yml
+++ b/data/cities/tulsa/sams-club.yml
@@ -1,11 +1,11 @@
-id: 363518493
+id: 164015326
 type: way
-latitude: 36.06296
-longitude: -95.87277
-postcode: "74133"
+latitude: 36.10016
+longitude: -95.90594
+postcode: "74145"
 city: Tulsa
-street: "South Mingo Road"
-housenumber: 6922
-phone: "+1 918-252-9503"
+street: "South Sheridan"
+housenumber: 4420
+phone: "+1 918-627-1443"
 opening_hours: "Mo 10:00-20:00; Sa 09:00-20:00; Su 10:00-18:00"
-website: "https://www.samsclub.com/club/tulsa-ok-sams-club/6342"
+website: "https://www.samsclub.com/club/tulsa-ok-sams-club/8263"
