update content and data

--- a/data/cities/oklahoma-city/okey-locksmith.yml
+++ b/data/cities/oklahoma-city/okey-locksmith.yml
@@ -1,11 +1,11 @@
-id: 12269044955
+id: 1327037016
 type: node
-latitude: 35.43556
-longitude: -97.5716
+latitude: 35.43561
+longitude: -97.57175
 postcode: "73119"
 city: Oklahoma City
-street: SW 29th St
+street: Southwest 29th Street
 housenumber: "3121"
-phone: (405) 703-8943
-opening_hours: Open 24 Hours
+phone: +1 405 703 8943
+opening_hours: 24/7
 website: ""
