--- a/data/cities/stillwater/on-cue.yml
+++ b/data/cities/stillwater/on-cue.yml
@@ -1,11 +1,11 @@
-id: 260550454
+id: 198275256
 type: node
-latitude: 36.17431
-longitude: -97.07027
-postcode: "74075"
+latitude: 36.11556
+longitude: -97.05099
+postcode: "74074"
 city: Stillwater
-street: North Washington Street
-housenumber: "5000"
+street: ""
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
