--- a/data/cities/tulsa/quiktrip-east-admiral-place.yml
+++ b/data/cities/tulsa/quiktrip-east-admiral-place.yml
@@ -1,11 +1,11 @@
-id: 315988744
+id: 742371764
 type: node
-latitude: 36.16123
-longitude: -95.94998
+latitude: 36.16013
+longitude: -95.88752
 postcode: ""
 city: Tulsa
 street: East Admiral Place
-housenumber: "2749"
+housenumber: "7878"
 phone: ""
-opening_hours: 24/7
+opening_hours: ""
 website: ""
