--- a/data/cities/tulsa/securcare-self-storage-south-mingo-road.yml
+++ b/data/cities/tulsa/securcare-self-storage-south-mingo-road.yml
@@ -1,11 +1,11 @@
-id: 691102824
+id: 497459345
 type: node
-latitude: 36.07837
-longitude: -95.86824
+latitude: 36.09957
+longitude: -95.86915
 postcode: "74146"
 city: Tulsa
 street: South Mingo Road
-housenumber: "5815"
+housenumber: "4360"
 phone: ""
-opening_hours: Mo-Fr 10:00-13:00,14:00-18:00; Th off; Sa 10:00-13:00,14:00-17:00
-website: https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/5815-south-mingo-road
+opening_hours: Mo-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00
+website: https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/4360-south-mingo-road
