--- a/data/cities/tulsa/securcare-self-storage-south-mingo-road-2.yml
+++ b/data/cities/tulsa/securcare-self-storage-south-mingo-road-2.yml
@@ -1,11 +1,11 @@
-id: 691102865
+id: 691102824
 type: node
-latitude: 36.07139
-longitude: -95.86931
-postcode: "74133"
+latitude: 36.07837
+longitude: -95.86824
+postcode: "74146"
 city: Tulsa
 street: South Mingo Road
-housenumber: "6308"
+housenumber: "5815"
 phone: ""
-opening_hours: Mo 09:45-13:00,14:00-18:00; We-Fr 10:00-13:00,14:00-18:00; Sa 10:00-13:00,14:00-17:00
-website: https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/6308-south-mingo-road
+opening_hours: Mo-Fr 10:00-13:00,14:00-18:00; Th off; Sa 10:00-13:00,14:00-17:00
+website: https://securcareselfstorage.com/self-storage-locations/oklahoma/tulsa-ok-storage-units/5815-south-mingo-road
