update content and data

--- a/data/cities/monkey-island/the-spa-at-shangri-la.yml
+++ b/data/cities/monkey-island/the-spa-at-shangri-la.yml
@@ -8,4 +8,4 @@ street: E Hwy 125
 housenumber: "57301"
 phone: +1 918 257 7734
 opening_hours: Th-Su 09:00-17:00
-website: https://shangrilaok.com/spa
+website: https://www.shangrilaok.com/wellness
