--- a/data/cities/oklahoma-city/extra-space-storage-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/extra-space-storage-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 464029623
+id: 1251633808
 type: node
-latitude: 35.5851
-longitude: -97.5664
-postcode: ""
+latitude: 35.51429
+longitude: -97.56481
+postcode: "73112"
 city: Oklahoma City
 street: North May Avenue
-housenumber: "11224"
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
