--- a/data/cities/stillwater/on-cue-2.yml
+++ b/data/cities/stillwater/on-cue-2.yml
@@ -1,10 +1,10 @@
-id: 264395979
+id: 198275256
 type: node
-latitude: 36.11542
-longitude: -97.03329
+latitude: 36.11556
+longitude: -97.05099
 postcode: "74074"
 city: Stillwater
-street: East 6th Avenue
+street: ""
 housenumber: ""
 phone: ""
 opening_hours: ""
