--- a/data/cities/tulsa/cherry-street-dispensary.yml
+++ b/data/cities/tulsa/cherry-street-dispensary.yml
@@ -2,10 +2,10 @@ id: 257416109
 type: node
 latitude: 36.14038
 longitude: -95.95654
-postcode: ""
+postcode: "74104"
 city: Tulsa
 street: East 15th Street
 housenumber: "2442"
-phone: ""
+phone: +1 918 887 4276
 opening_hours: ""
 website: ""
