--- a/data/cities/oklahoma-city/walgreens-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/walgreens-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 187510847
+id: 463968003
 type: node
-latitude: 35.52291
-longitude: -97.56473
-postcode: "73112"
+latitude: 35.59442
+longitude: -97.56631
+postcode: ""
 city: Oklahoma City
 street: North May Avenue
-housenumber: "5120"
-phone: +1 405 942 2471
-opening_hours: 24/7
-website: https://www.walgreens.com/locator/walgreens-5120+n+may+ave-oklahoma+city-ok-73112/id=4098
+housenumber: "12240"
+phone: ""
+opening_hours: ""
+website: https://www.walgreens.com/locator/walgreens-12240+n+may+ave-oklahoma+city-ok-73120/id=4111
