--- a/data/cities/tulsa/cherry-street-tattoo.yml
+++ b/data/cities/tulsa/cherry-street-tattoo.yml
@@ -2,10 +2,10 @@ id: 257416110
 type: node
 latitude: 36.14033
 longitude: -95.95628
-postcode: ""
+postcode: "74104"
 city: Tulsa
 street: East 15th Street
 housenumber: "2442"
-phone: ""
+phone: +1 918 402 1455
 opening_hours: ""
 website: ""
