--- a/data/cities/tulsa/cvs-pharmacy.yml
+++ b/data/cities/tulsa/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 461280505
+id: 537840505
 type: node
-latitude: 36.03151
-longitude: -95.92391
+latitude: 36.10369
+longitude: -95.9396
 postcode: ""
 city: Tulsa
-street: ""
-housenumber: ""
+street: South Harvard Avenue
+housenumber: "4107"
 phone: ""
-opening_hours: Mo-Th 09:00-21:00; Fr 09:00-22:00; Sa 08:00-22:00; Su 10:00-20:00
-website: ""
+opening_hours: Mo-Su 08:00-22:00
+website: https://www.cvs.com/store-locator/tulsa-ok-pharmacies/4107-s-harvard-ave-tulsa-ok-74135/storeid=7972
