update content and data

--- a/data/cities/muskogee/caseys-general-store.yml
+++ b/data/cities/muskogee/caseys-general-store.yml
@@ -2,7 +2,7 @@ id: 2644803406
 type: node
 latitude: 35.74732
 longitude: -95.40186
-postcode: ""
+postcode: "74401"
 city: Muskogee
 street: South 32nd Street
 housenumber: "702"
