--- a/data/cities/coweta/alamo-deli-and-dollar.yml
+++ b/data/cities/coweta/alamo-deli-and-dollar.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: South Broadway Avenue
 housenumber: "614"
-phone: ""
+phone: +1 918 279 6374
 opening_hours: ""
 website: ""
