--- a/data/cities/norman/the-lore.yml
+++ b/data/cities/norman/the-lore.yml
@@ -7,5 +7,5 @@ city: Norman
 street: S Porter Ave
 housenumber: "220"
 phone: ""
-opening_hours: ""
+opening_hours: Mo off; Tu-Th 11:00-18:00; Fr 11:00-20:00; Sa 09:00-20:00; Su 09:00-18:00
 website: ""
