--- a/data/cities/norman/walmart-supercenter.yml
+++ b/data/cities/norman/walmart-supercenter.yml
@@ -1,11 +1,11 @@
-id: 323586831
+id: 223299817
 type: node
-latitude: 35.22722
-longitude: -97.42104
-postcode: "73071"
+latitude: 35.22091
+longitude: -97.4805
+postcode: "73069"
 city: Norman
-street: 12th Avenue Northeast
-housenumber: "601"
-phone: +1 405-579-5203
+street: North Interstate Drive
+housenumber: "333"
+phone: +1 405-329-4000
 opening_hours: Mo-Su 06:00-23:00
-website: https://www.walmart.com/store/2734-norman-ok
+website: https://www.walmart.com/store/212-norman-ok
