--- a/data/cities/tulsa/fiesta-mart-south-mingo-road.yml
+++ b/data/cities/tulsa/fiesta-mart-south-mingo-road.yml
@@ -4,7 +4,7 @@ latitude: 36.04587
 longitude: -95.86801
 postcode: "74133"
 city: Tulsa
-street: South Mingo Road East
+street: South Mingo Road
 housenumber: "8107"
 phone: ""
 opening_hours: ""
