--- a/data/cities/tulsa/jiffy-lube-east-81st-street.yml
+++ b/data/cities/tulsa/jiffy-lube-east-81st-street.yml
@@ -4,7 +4,7 @@ latitude: 36.0461
 longitude: -95.86755
 postcode: "74133"
 city: Tulsa
-street: East 81st Street South
+street: East 81st Street
 housenumber: "9732"
 phone: ""
 opening_hours: ""
