--- a/data/cities/tulsa/lolli-and-pops.yml
+++ b/data/cities/tulsa/lolli-and-pops.yml
@@ -4,7 +4,7 @@ latitude: 36.06315
 longitude: -95.88009
 postcode: "74133"
 city: Tulsa
-street: South Memorial Drive East
+street: South Memorial Drive
 housenumber: "7021"
 phone: +1 918 250 9916
 opening_hours: ""
