--- a/data/cities/tulsa/sees-candies.yml
+++ b/data/cities/tulsa/sees-candies.yml
@@ -4,8 +4,8 @@ latitude: 36.06322
 longitude: -95.88021
 postcode: "74133"
 city: Tulsa
-street: South Memorial Drive East
+street: South Memorial Drive
 housenumber: "7021"
 phone: +1 918 294 0522
 opening_hours: ""
-website: ""
+website: https://www.sees.com/
