--- a/data/cities/wagoner/stop-n-go.yml
+++ b/data/cities/wagoner/stop-n-go.yml
@@ -5,7 +5,7 @@ longitude: -95.36933
 postcode: "74467"
 city: Wagoner
 street: East Cherokee Street
-housenumber: ""
+housenumber: "701"
 phone: ""
 opening_hours: ""
 website: ""
