update content and data

--- a/data/cities/glenpool/caseys-general-store.yml
+++ b/data/cities/glenpool/caseys-general-store.yml
@@ -1,10 +1,10 @@
 id: 1002795540
 type: node
-latitude: 35.94545
-longitude: -96.00753
+latitude: 35.94544
+longitude: -96.00755
 postcode: "74033"
 city: Glenpool
-street: South Broadway Street
+street: South Broadway Street East
 housenumber: "15085"
 phone: (918) 322-3105
 opening_hours: 04:00-24:00
