--- a/data/cities/glenpool/braums.yml
+++ b/data/cities/glenpool/braums.yml
@@ -1,10 +1,10 @@
 id: 1002793092
 type: node
 latitude: 35.94549
-longitude: -96.00892
+longitude: -96.00893
 postcode: "74033"
 city: Glenpool
-street: South Broadway Street
+street: South Broadway Street East
 housenumber: "15050"
 phone: +1-918-938-0662
 opening_hours: ""
