update content and data

--- a/data/cities/broken-arrow/ba-supps.yml
+++ b/data/cities/broken-arrow/ba-supps.yml
@@ -1,11 +1,11 @@
-id: 195664348
+id: 1005763228
 type: node
-latitude: 36.01892
-longitude: -95.79603
+latitude: 36.0309
+longitude: -95.79669
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: "3301"
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
