--- a/data/cities/broken-arrow/emblazon-printing-specialties.yml
+++ b/data/cities/broken-arrow/emblazon-printing-specialties.yml
@@ -1,11 +1,11 @@
-id: 1005763229
+id: 12593737541
 type: node
-latitude: 36.03097
-longitude: -95.79669
+latitude: 36.0179
+longitude: -95.79554
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: ""
+housenumber: "3357"
 phone: ""
 opening_hours: ""
 website: ""
