--- a/data/cities/broken-arrow/maverik.yml
+++ b/data/cities/broken-arrow/maverik.yml
@@ -1,11 +1,11 @@
-id: 1011937710
+id: 296786323
 type: node
-latitude: 36.01991
-longitude: -95.70892
-postcode: "74014"
+latitude: 36.01696
+longitude: -95.79673
+postcode: "74011"
 city: Broken Arrow
-street: East Highway 51
-housenumber: "24055"
+street: South Elm Place
+housenumber: "3621"
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: https://www.maverik.com/
