--- a/data/cities/broken-arrow/waters-edge-winery.yml
+++ b/data/cities/broken-arrow/waters-edge-winery.yml
@@ -1,11 +1,11 @@
-id: 1005763229
+id: 12591050015
 type: node
-latitude: 36.03097
-longitude: -95.79669
+latitude: 36.01903
+longitude: -95.79825
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: ""
+housenumber: "3300"
 phone: ""
 opening_hours: ""
 website: ""
