--- a/data/cities/glenpool/autozone.yml
+++ b/data/cities/glenpool/autozone.yml
@@ -4,7 +4,7 @@ latitude: 35.98739
 longitude: -96.01377
 postcode: "74033"
 city: Glenpool
-street: Vancouver Avenue
+street: South Vancouver Avenue West
 housenumber: "12121"
 phone: (918) 216-8030
 opening_hours: Mo-Sa 07:30-21:00; Su 09:00-20:00
