--- a/data/cities/broken-arrow/tao-spa.yml
+++ b/data/cities/broken-arrow/tao-spa.yml
@@ -1,11 +1,11 @@
-id: 1005763229
+id: 12593737547
 type: node
-latitude: 36.03097
-longitude: -95.79669
+latitude: 36.0185
+longitude: -95.79555
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: ""
+housenumber: "3329"
 phone: ""
 opening_hours: ""
 website: ""
