--- a/data/cities/broken-arrow/walgreens.yml
+++ b/data/cities/broken-arrow/walgreens.yml
@@ -1,11 +1,11 @@
-id: 471659222
+id: 363494212
 type: node
-latitude: 36.08919
-longitude: -95.81475
+latitude: 36.03272
+longitude: -95.83413
 postcode: "74012"
 city: Broken Arrow
-street: North Aspen Avenue
-housenumber: "3751"
-phone: +1 918 355 2317
+street: West Washington Street
+housenumber: "3600"
+phone: +1 918 252 9297
 opening_hours: ""
-website: https://www.walgreens.com/locator/walgreens-3751+n+aspen+ave-broken+arrow-ok-74012/id=12160
+website: https://www.walgreens.com/locator/walgreens-3600+w+washington+st-broken+arrow-ok-74012/id=7547
