--- a/data/cities/glenpool/walmart-supercenter.yml
+++ b/data/cities/glenpool/walmart-supercenter.yml
@@ -4,7 +4,7 @@ latitude: 35.9838
 longitude: -96.0155
 postcode: "74033"
 city: Glenpool
-street: South Waco Avenue
+street: South Waco Avenue West
 housenumber: "12200"
 phone: +1 918-299-8030
 opening_hours: Mo-Su 06:00-01:00
