update content and data

--- a/data/cities/glenpool/country-mart.yml
+++ b/data/cities/glenpool/country-mart.yml
@@ -4,7 +4,7 @@ latitude: 35.95853
 longitude: -96.00309
 postcode: "74033"
 city: Glenpool
-street: South Elm Street
+street: South Elm Street East
 housenumber: "14189"
 phone: ""
 opening_hours: ""
