--- a/data/cities/glenpool/easton-sod.yml
+++ b/data/cities/glenpool/easton-sod.yml
@@ -4,7 +4,7 @@ latitude: 35.96481
 longitude: -96.01113
 postcode: "74033"
 city: Glenpool
-street: South Casper Street West
+street: South US 75 West
 housenumber: "13703"
 phone: ""
 opening_hours: ""
