--- a/data/cities/glenpool/jiffy-lube.yml
+++ b/data/cities/glenpool/jiffy-lube.yml
@@ -4,7 +4,7 @@ latitude: 35.98708
 longitude: -96.01754
 postcode: "74066"
 city: Glenpool
-street: South Waco Avenue
+street: South Waco Avenue West
 housenumber: "12108"
 phone: (918) 296-7005
 opening_hours: ""
