update content and data

--- a/data/cities/broken-arrow/atwoods.yml
+++ b/data/cities/broken-arrow/atwoods.yml
@@ -7,5 +7,5 @@ city: Broken Arrow
 street: East Kenosha Street
 housenumber: "2351"
 phone: +1 918 355 1300
-opening_hours: ""
+opening_hours: Mo-Sa 07:00-21:00; Su 07:00-19:00
 website: ""
