--- a/data/cities/hominy/the-backhouse.yml
+++ b/data/cities/hominy/the-backhouse.yml
@@ -6,6 +6,6 @@ postcode: "74035"
 city: Hominy
 street: West Main Street
 housenumber: "113"
-phone: ""
+phone: +1-918-885-9831
 opening_hours: Mo-Sa 09:00-00:00
 website: ""
