update content and data

--- a/data/cities/broken-arrow/stay-buzzin-south-elm-place.yml
+++ b/data/cities/broken-arrow/stay-buzzin-south-elm-place.yml
@@ -1,11 +1,11 @@
-id: 1241675191
+id: 1005763229
 type: node
-latitude: 35.97562
-longitude: -95.79804
-postcode: "74011"
+latitude: 36.03097
+longitude: -95.79669
+postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: "7844"
+housenumber: "1921"
 phone: ""
-opening_hours: Mo-Sa 10:00-20:00
+opening_hours: Mo-Sa 09:00-22:00; Su 10:00-21:00
 website: ""
