--- a/data/cities/broken-arrow/stay-buzzin.yml
+++ b/data/cities/broken-arrow/stay-buzzin.yml
@@ -1,11 +1,11 @@
-id: 1005763229
+id: 2584037979
 type: node
-latitude: 36.03097
-longitude: -95.79669
+latitude: 36.03094
+longitude: -95.79705
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: ""
+housenumber: "1921"
 phone: ""
-opening_hours: ""
+opening_hours: Mo-Sa 09:00-22:00; Su 10:00-21:00
 website: ""
