--- a/data/cities/oklahoma-city/the-home-depot.yml
+++ b/data/cities/oklahoma-city/the-home-depot.yml
@@ -1,11 +1,11 @@
-id: 229953668
+id: 334910887
 type: node
-latitude: 35.56131
-longitude: -97.64791
-postcode: "73132"
+latitude: 35.61502
+longitude: -97.55244
+postcode: "73134"
 city: Oklahoma City
-street: Northwest Expressway
-housenumber: "7620"
-phone: +1 405-773-6077
+street: North Pennsylvania Avenue
+housenumber: "14201"
+phone: +1 405-749-1590
 opening_hours: Mo-Sa 06:00-22:00; Su 08:00-20:00
-website: https://www.homedepot.com/l/nw-oklahoma-city/ok/oklahoma-city/73132/3909
+website: https://www.homedepot.com/l/Quail-Springs/OK/Oklahoma-City/73134/3919
