--- a/data/cities/broken-arrow/ba-supps.yml
+++ b/data/cities/broken-arrow/ba-supps.yml
@@ -5,7 +5,7 @@ longitude: -95.79669
 postcode: "74012"
 city: Broken Arrow
 street: South Elm Place
-housenumber: ""
+housenumber: "1923"
 phone: ""
 opening_hours: ""
 website: ""
