--- a/data/cities/oklahoma-city/lowes.yml
+++ b/data/cities/oklahoma-city/lowes.yml
@@ -1,11 +1,11 @@
-id: 356330948
+id: 228169576
 type: node
-latitude: 35.38876
-longitude: -97.51504
-postcode: "73139"
+latitude: 35.50954
+longitude: -97.56715
+postcode: "73112"
 city: Oklahoma City
-street: Southwest 74th Street
-housenumber: "100"
-phone: +1 405-632-3535
-opening_hours: Mo-Sa 06:00-22:00; Su 08:00-20:00
-website: https://www.lowes.com/store/ok-oklahoma-city/0268
+street: North May Avenue
+housenumber: "3801"
+phone: +1 405 246 1200;+1 405 246 1229
+opening_hours: Mo-Sa 06:00-21:00; Su 08:00-20:00
+website: https://www.lowes.com/store/OK-Oklahoma-City/2540
