update content and data

--- a/data/cities/broken-arrow/walgreens.yml
+++ b/data/cities/broken-arrow/walgreens.yml
@@ -1,11 +1,11 @@
-id: 381939320
+id: 363494212
 type: node
-latitude: 36.00351
-longitude: -95.79826
-postcode: "74011"
+latitude: 36.03272
+longitude: -95.83413
+postcode: "74012"
 city: Broken Arrow
-street: South Elm Place
-housenumber: "4704"
-phone: +1 918 455 8308
+street: West Washington Street
+housenumber: "3600"
+phone: +1 918 252 9297
 opening_hours: ""
-website: ""
+website: https://www.walgreens.com/locator/walgreens-3600+w+washington+st-broken+arrow-ok-74012/id=7547
