--- a/data/cities/owasso/quiktrip.yml
+++ b/data/cities/owasso/quiktrip.yml
@@ -4,7 +4,7 @@ latitude: 36.3211
 longitude: -95.81948
 postcode: "74055"
 city: Owasso
-street: East 116th Street North
+street: North Owasso Expressway
 housenumber: "11590"
 phone: ""
 opening_hours: 24/7
