--- a/data/cities/roland/advanced-eye-care.yml
+++ b/data/cities/roland/advanced-eye-care.yml
@@ -6,6 +6,6 @@ postcode: "74954"
 city: Roland
 street: Ray Fine Boulevard
 housenumber: ""
-phone: ""
+phone: "+19184273037"
 opening_hours: ""
 website: ""
