--- a/data/cities/stillwater/wilson-cadillac.yml
+++ b/data/cities/stillwater/wilson-cadillac.yml
@@ -1,11 +1,11 @@
-id: 238798624
+id: 484296510
 type: node
-latitude: 36.11717
-longitude: -97.12218
+latitude: 36.11776
+longitude: -97.12247
 postcode: "74074"
 city: Stillwater
 street: West 6th Avenue
 housenumber: "4700"
 phone: +1 405 372 3926
 opening_hours: ""
-website: https://www.wilsongmc.com/
+website: https://www.wilsoncadillac.com/
