--- a/data/cities/oklahoma-city/dicks-sporting-goods.yml
+++ b/data/cities/oklahoma-city/dicks-sporting-goods.yml
@@ -1,11 +1,11 @@
-id: 435215612
+id: 229068307
 type: node
-latitude: 35.46375
-longitude: -97.63012
-postcode: "73128"
+latitude: 35.53088
+longitude: -97.56822
+postcode: "73112"
 city: Oklahoma City
-street: Southwest 3rd Street
-housenumber: "6601"
-phone: +1 405-491-2570
-opening_hours: Mo-Sa 09:00-21:00; Su 10:00-19:00
-website: https://stores.dickssportinggoods.com/ok/oklahoma-city/1081/
+street: Northwest 59th Street
+housenumber: "3000"
+phone: +1 405-827-6573
+opening_hours: Mo-Sa 10:00-21:00; Su 10:00-19:00
+website: https://stores.dickssportinggoods.com/ok/oklahoma-city/5419/
