--- a/data/cities/roland/ranger-express.yml
+++ b/data/cities/roland/ranger-express.yml
@@ -6,6 +6,6 @@ postcode: "74954"
 city: Roland
 street: South Roland Road
 housenumber: "104"
-phone: 918-503-6531
+phone: +1918-503-6531
 opening_hours: ""
 website: ""
