--- a/data/cities/stillwater/wilson-chevrolet.yml
+++ b/data/cities/stillwater/wilson-chevrolet.yml
@@ -6,6 +6,6 @@ postcode: "74074"
 city: Stillwater
 street: West 6th Avenue
 housenumber: "4850"
-phone: 877-526-5255
+phone: +1 405 372 3925
 opening_hours: Mo-Fr 08:00-19:00; Sa 08:00-18:00
-website: https://www.wilsongm.com/
+website: https://www.wilsonchevyok.com/
