update content and data

--- a/data/cities/jenks/habitat-for-humanity-restore.yml
+++ b/data/cities/jenks/habitat-for-humanity-restore.yml
@@ -1,10 +1,10 @@
 id: 10756028094
 type: node
-latitude: 36.0233
-longitude: -96.00888
+latitude: 36.02326
+longitude: -96.00902
 postcode: "74037"
 city: Jenks
-street: West Main Street
+street: West Main Street South
 housenumber: "3014"
 phone: ""
 opening_hours: ""
