--- a/data/cities/jenks/caseys-general-store-west-main-street-south.yml
+++ b/data/cities/jenks/caseys-general-store-west-main-street-south.yml
@@ -4,7 +4,7 @@ latitude: 36.02413
 longitude: -96.00764
 postcode: "74037"
 city: Jenks
-street: West Main Street
+street: West Main Street South
 housenumber: "2840"
 phone: ""
 opening_hours: ""
