--- a/data/cities/tulsa/dollar-general.yml
+++ b/data/cities/tulsa/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 1191893409
+id: 1241434074
 type: node
-latitude: 36.11973
-longitude: -95.86754
-postcode: "74146"
+latitude: 36.13305
+longitude: -95.84396
+postcode: ""
 city: Tulsa
-street: East 31st Street
-housenumber: "9727"
-phone: "+15392155360"
+street: East 21st Street
+housenumber: "11902"
+phone: ""
 opening_hours: Mo-Su 08:00-22:00
-website: https://www.dollargeneral.com/store-directory/ok/tulsa/7519
+website: https://www.dollargeneral.com/store-directory/ok/tulsa/14947
