--- a/data/cities/tulsa/sprouts-farmers-market.yml
+++ b/data/cities/tulsa/sprouts-farmers-market.yml
@@ -1,11 +1,11 @@
-id: 728085766
+id: 537840504
 type: node
-latitude: 36.01645
-longitude: -95.88474
-postcode: "74133"
+latitude: 36.10322
+longitude: -95.93878
+postcode: "74135"
 city: Tulsa
-street: South Memorial Drive
-housenumber: "10111"
-phone: +1 918-364-7272
+street: South Harvard Avenue
+housenumber: "4123"
+phone: +1 918-858-8850
 opening_hours: Mo-Su 07:00-22:00
-website: https://sprouts.com/store/ok/tulsa/bixby
+website: https://www.sprouts.com/store/ok/tulsa/tulsa/
