update content and data

--- a/data/cities/stillwater/braums.yml
+++ b/data/cities/stillwater/braums.yml
@@ -1,11 +1,11 @@
-id: 257717161
+id: 236346557
 type: node
-latitude: 36.11546
-longitude: -97.08899
-postcode: "74074"
+latitude: 36.12814
+longitude: -97.05201
+postcode: "74075"
 city: Stillwater
-street: West 6th Avenue
-housenumber: "2401"
-phone: +1-405-372-8085
+street: North Perkins Road
+housenumber: "504"
+phone: +1-405-372-2076
 opening_hours: ""
 website: ""
