--- a/data/cities/tulsa/discount-tire.yml
+++ b/data/cities/tulsa/discount-tire.yml
@@ -4,7 +4,7 @@ latitude: 36.0511
 longitude: -96.00588
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7792"
 phone: ""
 opening_hours: ""
