--- a/data/cities/tulsa/michaels-south-olympia-avenue-west.yml
+++ b/data/cities/tulsa/michaels-south-olympia-avenue-west.yml
@@ -4,7 +4,7 @@ latitude: 36.05535
 longitude: -96.00502
 postcode: 74132-1838
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7424"
 phone: +1 918-445-2224
 opening_hours: Mo-Sa 09:00-21:00; Su 10:00-19:00
