--- a/data/cities/tulsa/orilley-auto-part.yml
+++ b/data/cities/tulsa/orilley-auto-part.yml
@@ -4,7 +4,7 @@ latitude: 36.16134
 longitude: -95.90203
 postcode: "74115"
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "6707"
 phone: (918)838-0055
 opening_hours: Mo-Sa 07:30-21:00; Su 09:00-20:00
