--- a/data/cities/tulsa/paytons-corner.yml
+++ b/data/cities/tulsa/paytons-corner.yml
@@ -4,7 +4,7 @@ latitude: 36.03173
 longitude: -96.01206
 postcode: "74132"
 city: Tulsa
-street: South Union Avenue
+street: South Union Avenue West
 housenumber: "9102"
 phone: ""
 opening_hours: ""
