--- a/data/cities/tulsa/quality-furniture-repair-and-restoration.yml
+++ b/data/cities/tulsa/quality-furniture-repair-and-restoration.yml
@@ -4,7 +4,7 @@ latitude: 36.16064
 longitude: -95.9184
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5044"
 phone: ""
 opening_hours: ""
