--- a/data/cities/tulsa/reo-company.yml
+++ b/data/cities/tulsa/reo-company.yml
@@ -4,7 +4,7 @@ latitude: 36.16059
 longitude: -95.91119
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5902"
 phone: +1 918 437 1700
 opening_hours: ""
