--- a/data/cities/tulsa/shoe-show.yml
+++ b/data/cities/tulsa/shoe-show.yml
@@ -4,7 +4,7 @@ latitude: 36.16135
 longitude: -95.89531
 postcode: "74115"
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "7301"
 phone: ""
 opening_hours: ""
