--- a/data/cities/oklahoma-city/dillards.yml
+++ b/data/cities/oklahoma-city/dillards.yml
@@ -1,11 +1,11 @@
-id: 4677688207
+id: 4610562229
 type: node
-latitude: 35.52429
-longitude: -97.5439
+latitude: 35.5243
+longitude: -97.54622
 postcode: ""
 city: Oklahoma City
 street: ""
 housenumber: ""
-phone: +1 405 840 8495
-opening_hours: Mo-Sa 11:00-20:00; Su 12:00-18:00
-website: https://www.dillards.com/stores/oklahoma/penn-square-mall-oklahoma-city/0796
+phone: ""
+opening_hours: ""
+website: ""
