--- a/data/cities/stillwater/oncue-north-main-street.yml
+++ b/data/cities/stillwater/oncue-north-main-street.yml
@@ -1,10 +1,10 @@
-id: 236346555
+id: 209320278
 type: node
-latitude: 36.12743
-longitude: -97.05209
+latitude: 36.13029
+longitude: -97.0597
 postcode: "74075"
 city: Stillwater
-street: East Hall of Fame Avenue
+street: North Main Street
 housenumber: ""
 phone: ""
 opening_hours: ""
