--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 209320278
+id: 237051366
 type: node
-latitude: 36.13029
-longitude: -97.0597
+latitude: 36.13025
+longitude: -97.05204
 postcode: "74075"
 city: Stillwater
-street: North Main Street
-housenumber: ""
+street: North Perkins Road
+housenumber: "724"
 phone: ""
 opening_hours: ""
 website: ""
