--- a/data/cities/tulsa/accuracy-and-quality-financial-services.yml
+++ b/data/cities/tulsa/accuracy-and-quality-financial-services.yml
@@ -4,7 +4,7 @@ latitude: 36.16123
 longitude: -95.91039
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5921"
 phone: ""
 opening_hours: ""
