--- a/data/cities/tulsa/bentons-quality-appliances.yml
+++ b/data/cities/tulsa/bentons-quality-appliances.yml
@@ -4,7 +4,7 @@ latitude: 36.16131
 longitude: -95.91124
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5751"
 phone: +1 918 836 9500
 opening_hours: ""
