--- a/data/cities/tulsa/dollar-general.yml
+++ b/data/cities/tulsa/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 1241434074
+id: 1160949856
 type: node
-latitude: 36.13305
-longitude: -95.84396
+latitude: 36.14738
+longitude: -95.83496
 postcode: ""
 city: Tulsa
-street: East 21st Street
-housenumber: "11902"
-phone: ""
-opening_hours: Mo-Su 08:00-22:00
-website: https://www.dollargeneral.com/store-directory/ok/tulsa/14947
+street: East 11th Street
+housenumber: "12702"
+phone: +1 539 222 3530
+opening_hours: ""
+website: https://www.dollargeneral.com/store-directory/ok/tulsa/20982
