--- a/data/cities/tulsa/evapeshoppe.yml
+++ b/data/cities/tulsa/evapeshoppe.yml
@@ -4,7 +4,7 @@ latitude: 36.16123
 longitude: -95.91024
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5925"
 phone: ""
 opening_hours: ""
