--- a/data/cities/tulsa/jubilee-liquor.yml
+++ b/data/cities/tulsa/jubilee-liquor.yml
@@ -4,7 +4,7 @@ latitude: 36.16097
 longitude: -95.89816
 postcode: "74115"
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "7015"
 phone: ""
 opening_hours: Mo-Sa 10:00-21:00; Su 10:00-18:00
