--- a/data/cities/tulsa/mathis-brothers.yml
+++ b/data/cities/tulsa/mathis-brothers.yml
@@ -1,11 +1,11 @@
-id: 1079480052
+id: 557185816
 type: node
-latitude: 36.0316
-longitude: -95.88557
-postcode: "74133"
+latitude: 36.04468
+longitude: -96.00589
+postcode: "74132"
 city: Tulsa
-street: South Memorial Drive East
-housenumber: "9101"
+street: South Olympia Avenue West
+housenumber: "8220"
 phone: ""
 opening_hours: ""
 website: ""
