--- a/data/cities/tulsa/oros-auto-sales.yml
+++ b/data/cities/tulsa/oros-auto-sales.yml
@@ -4,7 +4,7 @@ latitude: 36.1611
 longitude: -95.9092
 postcode: "74115"
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "5945"
 phone: +1-918-794-5021
 opening_hours: Mo-Sa 10:00-18:00
