--- a/data/cities/tulsa/perfect-food-and-gas.yml
+++ b/data/cities/tulsa/perfect-food-and-gas.yml
@@ -4,7 +4,7 @@ latitude: 36.16123
 longitude: -95.94998
 postcode: ""
 city: Tulsa
-street: East Admiral Place
+street: East Admiral Place North
 housenumber: "2749"
 phone: ""
 opening_hours: ""
