--- a/data/cities/tulsa/southern-agriculture.yml
+++ b/data/cities/tulsa/southern-agriculture.yml
@@ -4,7 +4,7 @@ latitude: 36.04959
 longitude: -96.00548
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7836"
 phone: +1 918 794 7387
 opening_hours: ""
