update content and data

--- a/data/cities/stillwater/braums-north-perkins-road.yml
+++ b/data/cities/stillwater/braums-north-perkins-road.yml
@@ -1,11 +1,11 @@
-id: 308316938
+id: 236346557
 type: node
-latitude: 36.14383
-longitude: -97.05394
+latitude: 36.12814
+longitude: -97.05201
 postcode: "74075"
 city: Stillwater
 street: North Perkins Road
-housenumber: "2160"
-phone: ""
+housenumber: "504"
+phone: +1-405-372-2076
 opening_hours: ""
 website: ""
