--- a/data/cities/stillwater/oncue.yml
+++ b/data/cities/stillwater/oncue.yml
@@ -1,11 +1,11 @@
-id: 237051366
+id: 260383307
 type: node
-latitude: 36.13025
-longitude: -97.05204
-postcode: "74075"
+latitude: 36.11556
+longitude: -97.08984
+postcode: "74074"
 city: Stillwater
-street: North Perkins Road
-housenumber: "724"
+street: West 6th Avenue
+housenumber: "2421"
 phone: ""
 opening_hours: ""
 website: ""
