--- a/data/cities/tulsa/warehouse-market.yml
+++ b/data/cities/tulsa/warehouse-market.yml
@@ -1,11 +1,11 @@
-id: 363505772
+id: 257117422
 type: node
-latitude: 36.16798
-longitude: -95.90363
-postcode: "74115"
+latitude: 36.15604
+longitude: -95.95784
+postcode: "74104"
 city: Tulsa
-street: North Sheridan Road
-housenumber: "845"
-phone: ""
-opening_hours: ""
+street: South Lewis Avenue East
+housenumber: "301"
+phone: +1 918 582 0622
+opening_hours: Mo-Su 07:00-22:00
 website: ""
