update content and data

--- a/data/cities/norman/q1-massage.yml
+++ b/data/cities/norman/q1-massage.yml
@@ -6,6 +6,6 @@ postcode: "73071"
 city: Norman
 street: East Alameda Street
 housenumber: "1000"
-phone: (405) 757-2115
+phone: +1 405 757 2115
 opening_hours: ""
 website: https://q1massagenorman.com
