--- a/data/cities/oklahoma-city/okey-locksmith.yml
+++ b/data/cities/oklahoma-city/okey-locksmith.yml
@@ -6,6 +6,6 @@ postcode: "73119"
 city: Oklahoma City
 street: Southwest 29th Street
 housenumber: "3121"
-phone: ""
+phone: +1 405 703 8943
 opening_hours: ""
-website: ""
+website: https://okeylocksmith.com/locksmith-near-me/okc/
