update content and data

--- a/data/cities/owasso/kum-and-go.yml
+++ b/data/cities/owasso/kum-and-go.yml
@@ -1,11 +1,11 @@
-id: 244747626
+id: 937793511
 type: node
-latitude: 36.27928
-longitude: -95.85441
-postcode: ""
+latitude: 36.27934
+longitude: -95.81202
+postcode: "74055"
 city: Owasso
-street: East 16th Street
-housenumber: "10603"
+street: East 86th Street North
+housenumber: ""
 phone: ""
 opening_hours: ""
-website: https://www.kumandgo.com/store-locator?details=0886
+website: https://www.kumandgo.com/store-locator?details=0876
