--- a/data/cities/tulsa/fiesta-mart.yml
+++ b/data/cities/tulsa/fiesta-mart.yml
@@ -1,11 +1,11 @@
-id: 1235074754
+id: 1238844545
 type: node
-latitude: 36.01692
-longitude: -95.90357
-postcode: "74133"
+latitude: 36.11908
+longitude: -95.93684
+postcode: "74137"
 city: Tulsa
-street: East 101st Street
-housenumber: "6506"
+street: East 31st Street South
+housenumber: "3535"
 phone: ""
 opening_hours: ""
 website: ""
