--- a/data/cities/tulsa/gotcha-tire.yml
+++ b/data/cities/tulsa/gotcha-tire.yml
@@ -4,7 +4,7 @@ latitude: 36.1188
 longitude: -95.87124
 postcode: "74145"
 city: Tulsa
-street: East 31st Street
+street: East 31st Street South
 housenumber: "9404"
 phone: "+19183924433"
 opening_hours: ""
