--- a/data/cities/tulsa/macs-classic.yml
+++ b/data/cities/tulsa/macs-classic.yml
@@ -4,7 +4,7 @@ latitude: 36.11847
 longitude: -95.93853
 postcode: "74135"
 city: Tulsa
-street: East 31st Street
+street: East 31st Street South
 housenumber: "3344"
 phone: ""
 opening_hours: ""
