--- a/data/cities/tulsa/t-mobile.yml
+++ b/data/cities/tulsa/t-mobile.yml
@@ -4,7 +4,7 @@ latitude: 36.12007
 longitude: -95.85024
 postcode: "74146"
 city: Tulsa
-street: East 31st Street
+street: East 31st Street South
 housenumber: "11317"
 phone: ""
 opening_hours: ""
