--- a/data/cities/edmond/braums.yml
+++ b/data/cities/edmond/braums.yml
@@ -7,5 +7,5 @@ city: Edmond
 street: W I-35 Frontage Road
 housenumber: "1301"
 phone: +1-405-348-0529
-opening_hours: ""
-website: ""
+opening_hours: Mo-Su 06:00-22:45
+website: https://www.braums.com/store/1301-w-i-35-frontage-rd-edmond-ok/
