--- a/data/cities/edmond/walmart-supercenter-west-i-35-frontage.yml
+++ b/data/cities/edmond/walmart-supercenter-west-i-35-frontage.yml
@@ -7,5 +7,5 @@ city: Edmond
 street: West I-35 Frontage
 housenumber: "1225"
 phone: +1 405-348-8005
-opening_hours: 24/7
+opening_hours: Mo-Su 06:00-23:00
 website: https://www.walmart.com/store/389-edmond-ok
