--- a/data/cities/tulsa/dons-coin.yml
+++ b/data/cities/tulsa/dons-coin.yml
@@ -2,9 +2,9 @@ id: 1171901642
 type: node
 latitude: 36.11835
 longitude: -95.92471
-postcode: ""
+postcode: "74135"
 city: Tulsa
-street: East 31st Street
+street: East 31st Street South
 housenumber: "4614"
 phone: ""
 opening_hours: ""
