--- a/data/cities/tulsa/ranch-acres-wine-and-spirits.yml
+++ b/data/cities/tulsa/ranch-acres-wine-and-spirits.yml
@@ -4,7 +4,7 @@ latitude: 36.11846
 longitude: -95.93895
 postcode: "74135"
 city: Tulsa
-street: East 31st Street
+street: East 31st Street South
 housenumber: "3324"
 phone: "+19187471171"
 opening_hours: Mo-Sa 10:00-21:00; Su 12:00-16:00
