update content and data

--- a/data/cities/tulsa/yale-cleaners.yml
+++ b/data/cities/tulsa/yale-cleaners.yml
@@ -1,11 +1,11 @@
-id: 537840502
+id: 659362373
 type: node
-latitude: 36.10367
-longitude: -95.93854
-postcode: 74135-4643
+latitude: 36.06136
+longitude: -95.89975
+postcode: "74133"
 city: Tulsa
-street: East 41st Street
-housenumber: "3338"
-phone: +1 918 742 1044
+street: East 71st Street South
+housenumber: "6911"
+phone: ""
 opening_hours: ""
 website: ""
