--- a/data/cities/cushing/4m-collision.yml
+++ b/data/cities/cushing/4m-collision.yml
@@ -4,8 +4,8 @@ latitude: 35.98553
 longitude: -96.75195
 postcode: "74023"
 city: Cushing
-street: East Main Street
-housenumber: "1302"
+street: E Main St
+housenumber: "1117"
 phone: +1 405 441 1425
 opening_hours: Mo-Fr 08:30-17:00
 website: https://4mcollisioncushing.com
