--- a/data/cities/tulsa/aldi-east-21st-street-south.yml
+++ b/data/cities/tulsa/aldi-east-21st-street-south.yml
@@ -1,10 +1,10 @@
-id: 8627272236
+id: 630320017
 type: node
-latitude: 36.13255
-longitude: -95.83428
+latitude: 36.13262
+longitude: -95.83435
 postcode: "74129"
 city: Tulsa
-street: East 21st Street
+street: East 21st Street South
 housenumber: "12572"
 phone: +1 855-955-2534
 opening_hours: Mo-Su 09:00-20:00
