--- a/data/cities/tulsa/seoul-super.yml
+++ b/data/cities/tulsa/seoul-super.yml
@@ -4,7 +4,7 @@ latitude: 36.11782
 longitude: -95.83249
 postcode: "74134"
 city: Tulsa
-street: South 129th East Avenue
+street: South 129th Avenue East
 housenumber: "3171"
 phone: +1 918 665 3664
 opening_hours: ""
