update content and data

--- a/data/cities/muskogee/okie-mart.yml
+++ b/data/cities/muskogee/okie-mart.yml
@@ -6,6 +6,6 @@ postcode: "74403"
 city: Muskogee
 street: Old Shawnee Road
 housenumber: "2625"
-phone: ""
-opening_hours: ""
-website: ""
+phone: +1-918-912-2130
+opening_hours: Mo-Fr 09:00-18:00, Sa 09:00-16:00
+website: https://okie-mart.com/
