--- a/data/cities/stillwater/oreilly-auto-parts-west-6th-avenue.yml
+++ b/data/cities/stillwater/oreilly-auto-parts-west-6th-avenue.yml
@@ -5,7 +5,7 @@ longitude: -97.13258
 postcode: "74074"
 city: Stillwater
 street: West 6th Avenue
-housenumber: ""
+housenumber: "5411"
 phone: ""
 opening_hours: ""
 website: ""
