--- a/data/cities/broken-arrow/eleven01-barber-lounge.yml
+++ b/data/cities/broken-arrow/eleven01-barber-lounge.yml
@@ -1,11 +1,11 @@
-id: 10767251086
+id: 13090120280
 type: node
-latitude: 36.01545
-longitude: -95.79902
-postcode: "74011"
+latitude: 36.06159
+longitude: -95.80896
+postcode: "74012"
 city: Broken Arrow
-street: South Elm Place
-housenumber: "3786"
-phone: +1-918-884-7140
-opening_hours: ""
-website: ""
+street: West Kenosha Street
+housenumber: "1400"
+phone: +1 918-504-9404
+opening_hours: Mo-Fr 10:00-18:00; Sa 09:00-15:00
+website: eleven01lounge.com
