--- a/data/cities/broken-arrow/express-oil-change-and-tire-engineers.yml
+++ b/data/cities/broken-arrow/express-oil-change-and-tire-engineers.yml
@@ -1,11 +1,11 @@
-id: 12464091016
+id: 448841453
 type: node
-latitude: 35.99632
-longitude: -95.81587
-postcode: "74011"
+latitude: 36.06048
+longitude: -95.7785
+postcode: "74012"
 city: Broken Arrow
-street: ""
-housenumber: ""
-phone: ""
-opening_hours: ""
-website: ""
+street: East Kenosha Street
+housenumber: "1041"
+phone: +1-918-251-5823
+opening_hours: Mo-Fr 08:00-18:00;Sa 08:00-17:00
+website: https://www.expressoil.com/stores/broken-arrow/ok/1100/
