--- a/data/cities/norman/dollar-general.yml
+++ b/data/cities/norman/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 12128228249
+id: 3821419244
 type: node
-latitude: 35.20462
-longitude: -97.42169
-postcode: "73071"
+latitude: 35.22825
+longitude: -97.45954
+postcode: "73069"
 city: Norman
-street: East Lindsey Street
-housenumber: "1221"
+street: North Berry Road
+housenumber: "800"
 phone: ""
 opening_hours: Mo-Su 08:00-22:00
-website: https://www.dollargeneral.com/store-directory/ok/norman/2324
+website: https://www.dollargeneral.com/store-directory/ok/norman/4171
