--- a/data/cities/oklahoma-city/phat-tire-bike-shop.yml
+++ b/data/cities/oklahoma-city/phat-tire-bike-shop.yml
@@ -6,6 +6,6 @@ postcode: "73116"
 city: Oklahoma City
 street: North May Avenue
 housenumber: "7521"
-phone: ""
+phone: "4058494756"
 opening_hours: Mo-Th 10:00-19:00; Fr 09:00-1900; Sa 09:00-18:00
-website: ""
+website: https://www.phattirebikeshop.com/page.cfm?pageid=357
