--- a/data/cities/oklahoma-city/metro-by-t-mobile-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/metro-by-t-mobile-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 11209392883
+id: 11633586532
 type: node
-latitude: 35.53601
-longitude: -97.5661
-postcode: "73116"
+latitude: 35.49876
+longitude: -97.56588
+postcode: "73107"
 city: Oklahoma City
 street: North May Avenue
-housenumber: "6315"
-phone: +1 405 900 9794
-opening_hours: Mo-Sa 10:00-20:00; Su 12:00-18:00
-website: https://www.metrobyt-mobile.com/stores/bd/metro-by-t-mobile-oklahoma-city-ok-10207502/
+housenumber: ""
+phone: ""
+opening_hours: ""
+website: ""
