update content and data

--- a/data/cities/muskogee/safetynet-wireless.yml
+++ b/data/cities/muskogee/safetynet-wireless.yml
@@ -1,11 +1,11 @@
-id: 328270241
+id: 13147069876
 type: node
-latitude: 35.74594
-longitude: -95.35685
+latitude: 35.746
+longitude: -95.35657
 postcode: "74403"
 city: Muskogee
 street: Callahan Street
 housenumber: "817"
 phone: ""
 opening_hours: ""
-website: ""
+website: https://www.safetynetwireless.com/
