--- a/data/cities/oklahoma-city/balgees-tailor-shop.yml
+++ b/data/cities/oklahoma-city/balgees-tailor-shop.yml
@@ -2,7 +2,7 @@ id: 11247010992
 type: node
 latitude: 35.52192
 longitude: -97.58451
-postcode: ""
+postcode: "73112"
 city: Oklahoma City
 street: Northwest 50th Street
 housenumber: "3714"
