--- a/data/cities/oklahoma-city/discount-tire.yml
+++ b/data/cities/oklahoma-city/discount-tire.yml
@@ -1,11 +1,11 @@
-id: 334582470
+id: 464640887
 type: node
-latitude: 35.60828
-longitude: -97.62257
-postcode: "73142"
+latitude: 35.60366
+longitude: -97.54907
+postcode: "77706"
 city: Oklahoma City
-street: West Memorial Road
-housenumber: "5924"
+street: North Pennsylvania Avenue
+housenumber: "13140"
 phone: ""
 opening_hours: ""
 website: ""
