--- a/data/cities/tulsa/braums.yml
+++ b/data/cities/tulsa/braums.yml
@@ -1,11 +1,11 @@
-id: 728090607
+id: 691102981
 type: node
-latitude: 36.00462
-longitude: -95.88734
-postcode: "74133"
+latitude: 36.06119
+longitude: -95.96952
+postcode: "74136"
 city: Tulsa
-street: South Memorial Drive East
-housenumber: "10934"
-phone: +1-918-369-7878
+street: East 71st Street South
+housenumber: "1545"
+phone: +1 918 494 0331
 opening_hours: ""
-website: ""
+website: https://www.braums.com/store/1545-e-71st-st-tulsa-ok/
