--- a/data/cities/tulsa/hibdon-tires-plus.yml
+++ b/data/cities/tulsa/hibdon-tires-plus.yml
@@ -1,11 +1,11 @@
-id: 180521658
+id: 203839918
 type: node
-latitude: 36.04996
-longitude: -96.00597
-postcode: "74132"
+latitude: 36.16235
+longitude: -95.90213
+postcode: "74115"
 city: Tulsa
-street: South Olympia Avenue West
-housenumber: "7816"
+street: North 67th East Avenue
+housenumber: "33"
 phone: ""
 opening_hours: ""
 website: ""
