--- a/data/cities/tulsa/quiktrip-south-lewis-avenue-east-2.yml
+++ b/data/cities/tulsa/quiktrip-south-lewis-avenue-east-2.yml
@@ -1,11 +1,11 @@
-id: 914148065
+id: 1005483103
 type: node
-latitude: 36.1401
-longitude: -95.95772
-postcode: "74104"
+latitude: 36.08892
+longitude: -95.95722
+postcode: "74105"
 city: Tulsa
 street: South Lewis Avenue East
-housenumber: "1509"
-phone: ""
+housenumber: "5111"
+phone: +1 918 743 8136
 opening_hours: 24/7
 website: ""
