--- a/data/cities/edmond/petco.yml
+++ b/data/cities/edmond/petco.yml
@@ -6,6 +6,6 @@ postcode: "73034"
 city: Edmond
 street: South Bryant Avenue
 housenumber: "324"
-phone: +1 405-359-5671
+phone: +1=405-359-5671
 opening_hours: Mo-Sa 09:00-20:00; Su 10:00-19:00
 website: https://stores.petco.com/ok/edmond/pet-supplies-edmond-ok-1439.html
