--- a/data/cities/oklahoma-city/okc-dispensary.yml
+++ b/data/cities/oklahoma-city/okc-dispensary.yml
@@ -2,7 +2,7 @@ id: 11247010993
 type: node
 latitude: 35.52192
 longitude: -97.58433
-postcode: ""
+postcode: "73112"
 city: Oklahoma City
 street: Northwest 50th Street
 housenumber: "3710"
