--- a/data/cities/tulsa/braums-east-71st-street-south-2.yml
+++ b/data/cities/tulsa/braums-east-71st-street-south-2.yml
@@ -1,11 +1,11 @@
-id: 691102981
+id: 1173558929
 type: node
-latitude: 36.06119
-longitude: -95.96952
-postcode: "74136"
+latitude: 36.06128
+longitude: -95.86303
+postcode: "74133"
 city: Tulsa
 street: East 71st Street South
-housenumber: "1545"
-phone: +1 918 494 0331
+housenumber: "10107"
+phone: +1-918-459-5325
 opening_hours: ""
-website: https://www.braums.com/store/1545-e-71st-st-tulsa-ok/
+website: ""
