update content and data

--- a/data/cities/broken-arrow/maverik.yml
+++ b/data/cities/broken-arrow/maverik.yml
@@ -1,11 +1,11 @@
-id: 296786323
+id: 471643182
 type: node
-latitude: 36.01696
-longitude: -95.79673
-postcode: "74011"
+latitude: 36.07627
+longitude: -95.77901
+postcode: "74012"
 city: Broken Arrow
-street: South Elm Place
-housenumber: "3621"
+street: East Albany Street
+housenumber: "1054"
 phone: ""
-opening_hours: 24/7
+opening_hours: ""
 website: https://www.maverik.com/
