--- a/data/cities/red-oak/dollar-general.yml
+++ b/data/cities/red-oak/dollar-general.yml
@@ -2,7 +2,7 @@ id: 1230538264
 type: node
 latitude: 34.95123
 longitude: -95.07615
-postcode: ""
+postcode: "74563"
 city: Red Oak
 street: Northeast Market Street
 housenumber: "303"
