--- a/data/cities/broken-arrow/walgreens.yml
+++ b/data/cities/broken-arrow/walgreens.yml
@@ -1,11 +1,11 @@
-id: 471659222
+id: 381939320
 type: node
-latitude: 36.08919
-longitude: -95.81475
-postcode: "74012"
+latitude: 36.00351
+longitude: -95.79826
+postcode: "74011"
 city: Broken Arrow
-street: North Aspen Avenue
-housenumber: "3751"
-phone: +1 918 355 2317
+street: South Elm Place
+housenumber: "4704"
+phone: +1 918 455 8308
 opening_hours: ""
-website: https://www.walgreens.com/locator/walgreens-3751+n+aspen+ave-broken+arrow-ok-74012/id=12160
+website: ""
