--- a/data/cities/tulsa/kohls.yml
+++ b/data/cities/tulsa/kohls.yml
@@ -1,11 +1,11 @@
-id: 12176704181
+id: 495187822
 type: node
-latitude: 36.06383
-longitude: -95.86144
-postcode: "74133"
+latitude: 36.02515
+longitude: -95.94704
+postcode: "74137"
 city: Tulsa
-street: East 71st Street South
-housenumber: ""
-phone: +1 918 461 1950
-opening_hours: ""
-website: ""
+street: Riverside Parkway
+housenumber: "9595"
+phone: +1 918-299-5073
+opening_hours: Su 09:00-21:00; Mo-Th 09:00-23:00; Fr 09:00-23:00; Sa 08:00-23:00
+website: https://www.kohls.com/stores/ok/tulsa-426.shtml
