update content and data

--- a/data/cities/oklahoma-city/metro-by-t-mobile-north-may-avenue-2.yml
+++ b/data/cities/oklahoma-city/metro-by-t-mobile-north-may-avenue-2.yml
@@ -1,11 +1,11 @@
-id: 1251633798
+id: 11633586532
 type: node
-latitude: 35.51281
-longitude: -97.56537
-postcode: "73112"
+latitude: 35.49876
+longitude: -97.56588
+postcode: "73107"
 city: Oklahoma City
 street: North May Avenue
-housenumber: "4100"
+housenumber: ""
 phone: ""
 opening_hours: ""
 website: ""
