--- a/data/cities/tulsa/quiktrip-south-sheridan-road-3.yml
+++ b/data/cities/tulsa/quiktrip-south-sheridan-road-3.yml
@@ -1,11 +1,11 @@
-id: 601443742
+id: 379700514
 type: node
-latitude: 36.11959
-longitude: -95.90542
-postcode: "74114"
+latitude: 36.14865
+longitude: -95.90549
+postcode: ""
 city: Tulsa
 street: South Sheridan Road
-housenumber: "3050"
+housenumber: "1014"
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: ""
