--- a/data/cities/bixby/dollar-general.yml
+++ b/data/cities/bixby/dollar-general.yml
@@ -1,11 +1,11 @@
-id: 1433911961
+id: 13031877439
 type: node
-latitude: 35.91903
-longitude: -95.88552
+latitude: 35.98985
+longitude: -95.88561
 postcode: "74008"
 city: Bixby
 street: South Memorial Drive East
-housenumber: "16841"
+housenumber: "12001"
 phone: ""
-opening_hours: ""
-website: ""
+opening_hours: Mo-Su 08:00-21:00
+website: https://www.dollargeneral.com/store-directory/ok/bixby/8006
