--- a/data/cities/broken-arrow/maverik.yml
+++ b/data/cities/broken-arrow/maverik.yml
@@ -1,11 +1,11 @@
-id: 471643182
+id: 296786323
 type: node
-latitude: 36.07627
-longitude: -95.77901
-postcode: "74012"
+latitude: 36.01696
+longitude: -95.79673
+postcode: "74011"
 city: Broken Arrow
-street: East Albany Street
-housenumber: "1054"
+street: South Elm Place
+housenumber: "3621"
 phone: ""
-opening_hours: ""
+opening_hours: 24/7
 website: https://www.maverik.com/
