--- a/data/cities/oklahoma-city/take-5-oil-change-2.yml
+++ b/data/cities/oklahoma-city/take-5-oil-change-2.yml
@@ -1,8 +1,8 @@
-id: 4610562229
+id: 1151200160
 type: node
-latitude: 35.5243
-longitude: -97.54622
-postcode: ""
+latitude: 35.5654
+longitude: -97.56671
+postcode: "73120"
 city: Oklahoma City
 street: ""
 housenumber: ""
