--- a/data/cities/tulsa/firestone.yml
+++ b/data/cities/tulsa/firestone.yml
@@ -1,11 +1,11 @@
-id: 462195814
+id: 537811051
 type: node
-latitude: 36.03252
-longitude: -95.92022
-postcode: "74137"
+latitude: 36.11976
+longitude: -95.85581
+postcode: "74146"
 city: Tulsa
-street: East 91st Street South
-housenumber: "4937"
-phone: +1 918 894 6467
-opening_hours: Mo-Sa 07:00-19:00; Su 09:00-17:00
-website: https://www.firestonecompleteautocare.com/oklahoma/tulsa/4937-e-91st-st/
+street: East 31st Street South
+housenumber: "10815"
+phone: ""
+opening_hours: ""
+website: ""
