--- a/data/cities/tulsa/quiktrip-south-sheridan-road-2.yml
+++ b/data/cities/tulsa/quiktrip-south-sheridan-road-2.yml
@@ -1,11 +1,11 @@
-id: 379700514
+id: 601443742
 type: node
-latitude: 36.14865
-longitude: -95.90549
-postcode: ""
+latitude: 36.11959
+longitude: -95.90542
+postcode: "74114"
 city: Tulsa
 street: South Sheridan Road
-housenumber: "1014"
+housenumber: "3050"
 phone: ""
-opening_hours: 24/7
+opening_hours: ""
 website: ""
