update content and data

--- a/data/cities/oklahoma-city/take-5-oil-change-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/take-5-oil-change-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 11633586532
+id: 1251633798
 type: node
-latitude: 35.49876
-longitude: -97.56588
-postcode: "73107"
+latitude: 35.51281
+longitude: -97.56537
+postcode: "73112"
 city: Oklahoma City
 street: North May Avenue
-housenumber: ""
+housenumber: "4100"
 phone: ""
 opening_hours: ""
 website: ""
