--- a/data/cities/oklahoma-city/7-eleven-north-may-avenue.yml
+++ b/data/cities/oklahoma-city/7-eleven-north-may-avenue.yml
@@ -1,11 +1,11 @@
-id: 466159531
+id: 464029662
 type: node
-latitude: 35.55254
-longitude: -97.56575
-postcode: "73120"
+latitude: 35.58086
+longitude: -97.56797
+postcode: ""
 city: Oklahoma City
 street: North May Avenue
-housenumber: "7928"
-phone: +1 405-848-7326
-opening_hours: 24/7
+housenumber: "10901"
+phone: ""
+opening_hours: ""
 website: ""
