--- a/data/cities/tulsa/gotcha-tire.yml
+++ b/data/cities/tulsa/gotcha-tire.yml
@@ -1,11 +1,11 @@
-id: 1239668142
+id: 1191893407
 type: node
-latitude: 36.16101
-longitude: -95.88042
-postcode: "74115"
+latitude: 36.1188
+longitude: -95.87124
+postcode: "74145"
 city: Tulsa
-street: East Admiral Place North
-housenumber: "8545"
-phone: ""
+street: East 31st Street South
+housenumber: "9404"
+phone: "+19183924433"
 opening_hours: ""
 website: ""
