update content and data

--- a/data/cities/bixby/oreilly-auto-parts.yml
+++ b/data/cities/bixby/oreilly-auto-parts.yml
@@ -4,7 +4,7 @@ latitude: 35.94547
 longitude: -95.8871
 postcode: "74008"
 city: Bixby
-street: South Memorial Drive East
+street: South Memorial Drive
 housenumber: "15070"
 phone: ""
 opening_hours: ""
