--- a/data/cities/bixby/sutherlands.yml
+++ b/data/cities/bixby/sutherlands.yml
@@ -4,7 +4,7 @@ latitude: 35.9456
 longitude: -95.88897
 postcode: "74008"
 city: Bixby
-street: South Memorial Drive East
+street: South Memorial Drive
 housenumber: "15050"
 phone: ""
 opening_hours: ""
