--- a/data/cities/cleveland/tank-n-tummy.yml
+++ b/data/cities/cleveland/tank-n-tummy.yml
@@ -4,8 +4,8 @@ latitude: 36.20521
 longitude: -96.28575
 postcode: ""
 city: Cleveland
-street: West Peninsula North Drive
-housenumber: "1127"
+street: North Peninsula Drive East
+housenumber: "1091"
 phone: ""
 opening_hours: ""
 website: ""
