--- a/data/cities/bixby/spartan-nutrition.yml
+++ b/data/cities/bixby/spartan-nutrition.yml
@@ -4,7 +4,7 @@ latitude: 35.94696
 longitude: -95.88802
 postcode: "74008"
 city: Bixby
-street: South Memorial Drive East
+street: South Memorial Drive
 housenumber: "15020"
 phone: ""
 opening_hours: ""
