--- a/data/cities/oklahoma-city/oncue-northwest-expressway.yml
+++ b/data/cities/oklahoma-city/oncue-northwest-expressway.yml
@@ -1,11 +1,11 @@
-id: 323889965
+id: 972929631
 type: node
-latitude: 35.55174
-longitude: -97.6256
-postcode: "73132"
+latitude: 35.53644
+longitude: -97.58692
+postcode: "73013"
 city: Oklahoma City
 street: Northwest Expressway
-housenumber: "6200"
-phone: ""
+housenumber: "3901"
+phone: +1 405 942 0964
 opening_hours: ""
 website: ""
