update content and data

--- a/data/cities/tulsa/target.yml
+++ b/data/cities/tulsa/target.yml
@@ -1,11 +1,11 @@
-id: 83433110
+id: 94055356
 type: node
-latitude: 36.05575
-longitude: -96.00129
-postcode: 74132-1838
+latitude: 36.06242
+longitude: -95.85765
+postcode: 74133-2522
 city: Tulsa
-street: South Olympia Avenue
-housenumber: "7437"
-phone: +1 918-877-1620
-opening_hours: Mo-Su 08:00-22:00
-website: https://www.target.com/sl/tulsa-hills/2357
+street: East 71st Street South
+housenumber: "10711"
+phone: +1 918-307-8161
+opening_hours: 07:00-22:00
+website: https://www.target.com/sl/tulsa-se/1782
