--- a/data/cities/pauls-valley/braums.yml
+++ b/data/cities/pauls-valley/braums.yml
@@ -1,11 +1,11 @@
 id: 382642307
 type: node
-latitude: 34.73876
+latitude: 34.73875
 longitude: -97.2603
 postcode: "73075"
 city: Pauls Valley
 street: West Grant Avenue
 housenumber: "2702"
 phone: +1-405-238-9142
-opening_hours: ""
-website: ""
+opening_hours: Mo-Su 06:00-22:45
+website: https://www.braums.com/store/2702-grant-ave-pauls-valley-ok/
