update content and data

--- a/data/cities/sand-springs/yh-boutique.yml
+++ b/data/cities/sand-springs/yh-boutique.yml
@@ -2,9 +2,9 @@ id: 1181531226
 type: node
 latitude: 36.1383
 longitude: -96.11105
-postcode: ""
+postcode: "74063"
 city: Sand Springs
-street: West 2nd Street
+street: West 2nd Street North
 housenumber: "14"
 phone: ""
 opening_hours: ""
