--- a/data/cities/tulsa/fiesta-mart.yml
+++ b/data/cities/tulsa/fiesta-mart.yml
@@ -1,11 +1,11 @@
-id: 1235074754
+id: 427908410
 type: node
-latitude: 36.01692
-longitude: -95.90357
-postcode: "74133"
+latitude: 36.03153
+longitude: -95.94965
+postcode: "74137"
 city: Tulsa
-street: East 101st Street
-housenumber: "6506"
+street: East 91st Street South
+housenumber: "2737"
 phone: ""
 opening_hours: ""
 website: ""
