--- a/data/cities/tulsa/materia.yml
+++ b/data/cities/tulsa/materia.yml
@@ -7,5 +7,5 @@ city: Tulsa
 street: East Admiral Boulevard North
 housenumber: "2421"
 phone: ""
-opening_hours: Mo-Fr 09:00-17:00
+opening_hours: ""
 website: ""
