--- a/data/cities/tulsa/golden-salon.yml
+++ b/data/cities/tulsa/golden-salon.yml
@@ -6,6 +6,6 @@ postcode: "74110"
 city: Tulsa
 street: East Admiral Boulevard North
 housenumber: "2403"
-phone: ""
-opening_hours: Tu-Sa 10:00-18:00
+phone: +1-918-236-3777
+opening_hours: '"by appointment"'
 website: https://goldensalontulsa.glossgenius.com/
