--- a/data/cities/tulsa/kum-and-go-south-sheridan-road-east.yml
+++ b/data/cities/tulsa/kum-and-go-south-sheridan-road-east.yml
@@ -2,9 +2,9 @@ id: 601443667
 type: node
 latitude: 36.13309
 longitude: -95.90395
-postcode: ""
+postcode: "74129"
 city: Tulsa
-street: South Sheridan Road
+street: South Sheridan Road East
 housenumber: "2109"
 phone: ""
 opening_hours: 24/7
