update content and data

--- a/data/cities/stillwater/cowboy-copy.yml
+++ b/data/cities/stillwater/cowboy-copy.yml
@@ -7,5 +7,5 @@ city: Stillwater
 street: South Washington Street
 housenumber: "514"
 phone: ""
-opening_hours: unknown
+opening_hours: ""
 website: ""
