--- a/data/cities/tulsa/aldi-south-olympia-avenue-west.yml
+++ b/data/cities/tulsa/aldi-south-olympia-avenue-west.yml
@@ -4,7 +4,7 @@ latitude: 36.04482
 longitude: -96.00341
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "8205"
 phone: +1 855-955-2534
 opening_hours: Mo-Su 09:00-20:00
