--- a/data/cities/tulsa/petsmart.yml
+++ b/data/cities/tulsa/petsmart.yml
@@ -4,7 +4,7 @@ latitude: 36.05779
 longitude: -96.00476
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7322"
 phone: +1 918-445-8648
 opening_hours: Mo-Sa 09:00-21:00; Su 10:00-19:00
