--- a/data/cities/tulsa/staples.yml
+++ b/data/cities/tulsa/staples.yml
@@ -4,7 +4,7 @@ latitude: 36.05452
 longitude: -96.00202
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7521"
 phone: ""
 opening_hours: Mo-Fr 09:00-20:00; Sa 09:00-18:00; Su 11:00-18:00
