--- a/data/cities/tulsa/the-collision-center-on-route-66.yml
+++ b/data/cities/tulsa/the-collision-center-on-route-66.yml
@@ -1,11 +1,11 @@
-id: 477968461
+id: 477968467
 type: node
-latitude: 36.14759
-longitude: -95.91434
+latitude: 36.14767
+longitude: -95.91263
 postcode: "74112"
 city: Tulsa
 street: East 11th Street South
-housenumber: "5532"
-phone: ""
+housenumber: "5720"
+phone: +1 918 932 1966
 opening_hours: ""
 website: ""
