--- a/data/cities/tulsa/belk.yml
+++ b/data/cities/tulsa/belk.yml
@@ -4,7 +4,7 @@ latitude: 36.05694
 longitude: -96.00144
 postcode: 74132-1849
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7309"
 phone: +1 918 447 6823
 opening_hours: ""
