--- a/data/cities/tulsa/best-buy-south-olympia-avenue-west.yml
+++ b/data/cities/tulsa/best-buy-south-olympia-avenue-west.yml
@@ -4,7 +4,7 @@ latitude: 36.05818
 longitude: -96.00521
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7308"
 phone: +1 918-445-5242
 opening_hours: ""
