--- a/data/cities/tulsa/dicks-sporting-goods.yml
+++ b/data/cities/tulsa/dicks-sporting-goods.yml
@@ -4,7 +4,7 @@ latitude: 36.05421
 longitude: -96.00219
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7523"
 phone: +1 918-447-1100
 opening_hours: Mo-Sa 09:00-21:00; Su 10:00-19:00
