--- a/data/cities/tulsa/mustafas-auto-sales.yml
+++ b/data/cities/tulsa/mustafas-auto-sales.yml
@@ -1,11 +1,11 @@
-id: 477968461
+id: 898039024
 type: node
-latitude: 36.14759
-longitude: -95.91434
+latitude: 36.14767
+longitude: -95.91488
 postcode: "74112"
 city: Tulsa
 street: East 11th Street South
-housenumber: "5532"
-phone: ""
+housenumber: "5558"
+phone: +1 918 832 9544
 opening_hours: ""
 website: ""
