--- a/data/cities/tulsa/national-auto-sales.yml
+++ b/data/cities/tulsa/national-auto-sales.yml
@@ -1,11 +1,11 @@
-id: 477968461
+id: 477968434
 type: node
-latitude: 36.14759
-longitude: -95.91434
+latitude: 36.14743
+longitude: -95.91365
 postcode: "74112"
 city: Tulsa
 street: East 11th Street South
-housenumber: "5532"
-phone: ""
+housenumber: "5546"
+phone: +1 918 836 9400
 opening_hours: ""
 website: ""
