--- a/data/cities/tulsa/ross.yml
+++ b/data/cities/tulsa/ross.yml
@@ -4,7 +4,7 @@ latitude: 36.05702
 longitude: -96.00489
 postcode: "74132"
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7348"
 phone: +1 918-447-7781
 opening_hours: Mo-Th 09:30-22:00; Fr-Sa 09:00-23:00; Su 09:30-21:30
