--- a/data/cities/tulsa/snows-furniture.yml
+++ b/data/cities/tulsa/snows-furniture.yml
@@ -2,9 +2,9 @@ id: 1083040126
 type: node
 latitude: 36.15019
 longitude: -95.90433
-postcode: ""
+postcode: "74112"
 city: Tulsa
-street: South Sheridan Road
+street: South Sheridan Road;South Sheridan Road East
 housenumber: "851"
 phone: +1 918 834 0878
 opening_hours: Mo-Sa 10:00-18:00
