--- a/data/cities/tulsa/target-south-olympia-avenue-west.yml
+++ b/data/cities/tulsa/target-south-olympia-avenue-west.yml
@@ -4,7 +4,7 @@ latitude: 36.05575
 longitude: -96.00129
 postcode: 74132-1838
 city: Tulsa
-street: South Olympia Avenue
+street: South Olympia Avenue West
 housenumber: "7437"
 phone: +1 918-877-1620
 opening_hours: Mo-Su 08:00-22:00
