update content and data

--- a/data/cities/tulsa/family-dollar-east-admiral-place-north.yml
+++ b/data/cities/tulsa/family-dollar-east-admiral-place-north.yml
@@ -1,11 +1,11 @@
-id: 379866541
+id: 379866539
 type: node
-latitude: 36.16145
-longitude: -95.89726
+latitude: 36.16136
+longitude: -95.90155
 postcode: "74115"
 city: Tulsa
 street: East Admiral Place North
-housenumber: 7121;7124
-phone: +1-918-836-2058
+housenumber: "6721"
+phone: ""
 opening_hours: ""
 website: ""
