--- a/data/cities/tulsa/ranchers-fence.yml
+++ b/data/cities/tulsa/ranchers-fence.yml
@@ -1,11 +1,11 @@
-id: 379866541
+id: 379866537
 type: node
-latitude: 36.16145
-longitude: -95.89726
+latitude: 36.16114
+longitude: -95.89795
 postcode: "74115"
 city: Tulsa
 street: East Admiral Place North
-housenumber: 7121;7124
-phone: +1-918-836-2058
+housenumber: "7105"
+phone: ""
 opening_hours: ""
 website: ""
