--- a/data/cities/tulsa/t-mobile.yml
+++ b/data/cities/tulsa/t-mobile.yml
@@ -1,11 +1,11 @@
-id: 840963054
+id: 1009489847
 type: node
-latitude: 36.01795
-longitude: -95.88556
-postcode: "74133"
+latitude: 36.1039
+longitude: -95.91604
+postcode: "74135"
 city: Tulsa
-street: South Memorial Drive East
-housenumber: "10035"
-phone: ""
-opening_hours: ""
-website: ""
+street: East 41st Street South
+housenumber: "5336"
+phone: +1 918-270-1722
+opening_hours: Mo-Sa 08:00-20:00; Su 08:00-18:00
+website: https://www.t-mobile.com/stores/bd/t-mobile-tulsa-ok-74135-3sjv/
