update content and data

--- a/data/cities/norman/sprouts-farmers-market.yml
+++ b/data/cities/norman/sprouts-farmers-market.yml
@@ -7,5 +7,5 @@ city: Norman
 street: West Main Street
 housenumber: "559"
 phone: +1 405-217-4601
-opening_hours: Mo-Sa 08:00-21:04; Su 08:00-20:04
+opening_hours: Mo-Su 07:00-22:00
 website: https://www.sprouts.com/store/ok/norman/norman/
