--- a/data/cities/norman/cellar-wine-and-spirits.yml
+++ b/data/cities/norman/cellar-wine-and-spirits.yml
@@ -7,5 +7,5 @@ city: Norman
 street: West Main Street
 housenumber: "555"
 phone: ""
-opening_hours: Mo-Sa 10:00-21:00; PH off
+opening_hours: Mo-Sa 09:00-22:00; Su 12:00-18:00; PH off
 website: ""
