--- a/data/cities/tulsa/braums.yml
+++ b/data/cities/tulsa/braums.yml
@@ -1,11 +1,11 @@
-id: 379866541
+id: 478903880
 type: node
-latitude: 36.16145
-longitude: -95.89726
-postcode: "74115"
+latitude: 36.06039
+longitude: -95.90094
+postcode: "74133"
 city: Tulsa
-street: East Admiral Place North
-housenumber: 7121;7124
-phone: +1-918-836-2058
+street: East 71st Street South
+housenumber: "6574"
+phone: +1-918-493-5706
 opening_hours: ""
 website: ""
