update content and data

--- a/data/cities/jenks/jenks-collision-center.yml
+++ b/data/cities/jenks/jenks-collision-center.yml
@@ -2,9 +2,9 @@ id: 606525106
 type: node
 latitude: 36.0352
 longitude: -95.97563
-postcode: ""
+postcode: "74037"
 city: Jenks
-street: North Elm Street
+street: North Elm Street West
 housenumber: "1607"
 phone: ""
 opening_hours: Mo-Su 08:00-17:00
