update content and data

--- a/data/cities/tulsa/denver-avenue-station.yml
+++ b/data/cities/tulsa/denver-avenue-station.yml
@@ -4,7 +4,7 @@ latitude: 36.15177
 longitude: -95.99399
 postcode: ""
 city: Tulsa
-street: South Denver Avenue
+street: South Denver Avenue West
 housenumber: "319"
 phone: ""
 opening_hours: Mo-Fr 08:00-12:00, 13:00-17:00; Sa-Su,PH off
