--- a/data/cities/tulsa/quiktrip-south-denver-avenue-west.yml
+++ b/data/cities/tulsa/quiktrip-south-denver-avenue-west.yml
@@ -4,7 +4,7 @@ latitude: 36.14093
 longitude: -95.99153
 postcode: "74119"
 city: Tulsa
-street: South Denver Avenue
+street: South Denver Avenue West
 housenumber: "1443"
 phone: ""
 opening_hours: ""
