--- a/data/cities/tulsa/royal-massage.yml
+++ b/data/cities/tulsa/royal-massage.yml
@@ -2,9 +2,9 @@ id: 1117481143
 type: node
 latitude: 36.13825
 longitude: -95.99254
-postcode: ""
+postcode: "74119"
 city: Tulsa
-street: South Denver Avenue
+street: South Denver Avenue West
 housenumber: "1644"
 phone: +1 539 292 7795
 opening_hours: ""
