--- a/data/cities/tulsa/best-buy.yml
+++ b/data/cities/tulsa/best-buy.yml
@@ -4,7 +4,7 @@ latitude: 36.0638
 longitude: -95.86079
 postcode: "74133"
 city: Tulsa
-street: East 71st Street South
+street: East 71st Street
 housenumber: "10303"
 phone: +1 918-250-6819
 opening_hours: Mo-Fr 10:00-21:00; Sa 09:00-21:00; Su 11:00-19:00
