update content and data

--- a/data/cities/moore/marcums-nursery.yml
+++ b/data/cities/moore/marcums-nursery.yml
@@ -2,10 +2,10 @@ id: 394723540
 type: node
 latitude: 35.29575
 longitude: -97.42311
-postcode: ""
+postcode: "73071"
 city: Moore
 street: South Sooner Road
 housenumber: "17550"
-phone: ""
+phone: +1-405-447-3100
 opening_hours: Mo-Sa 8:30-17:00; PH off
-website: ""
+website: https://marcumsnursery.com/norman/
